--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="edu.calvin.cs262teamd.cleaningcrew.MainActivity">
+    tools:context="edu.calvin.cs262teamd.cleaningcrew.MainActivity"
+    android:background="#0031c4">
 
     <TextView
         android:layout_width="wrap_content"
