--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -69,4 +69,23 @@
         android:layout_centerHorizontal="true"
         android:id="@+id/textView7"
         android:textSize="12sp" />
+
+    <TextView
+        android:text="To establish a mobile-friendly user database for the Building Services Office and Campus Properties, eliminating the need for paper housekeeping logs, contact lists, etc. while providing instant access to information such as time-off requests and a connection to needed information for both student workers and supervisors."
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView8"
+        android:layout_above="@+id/textView"
+        android:layout_marginBottom="49dp" />
+
+    <TextView
+        android:text="Our Vision:"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/textView8"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="12dp"
+        android:id="@+id/textView9"
+        android:textSize="18sp"
+        android:textStyle="normal|bold" />
 </RelativeLayout>
