--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -11,14 +11,17 @@
     tools:context="edu.calvin.cs262teamd.cleaningcrew.AboutActivity">
 
     <TextView
-        android:text="Created By:"
-        android:layout_width="wrap_content"
+        android:text="To establish a mobile-friendly user database for the Building Services Office and Campus Properties, eliminating the need for paper housekeeping logs, contact lists, etc. while providing instant access to information such as time-off requests and a connection to needed information for both student workers and supervisors."
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/textView"
-        android:textSize="18sp"
-        android:textStyle="normal|bold" />
+        android:id="@+id/textView8"
+        android:layout_below="@+id/textView9"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_toStartOf="@+id/textView4"
+        android:layout_toLeftOf="@+id/textView4"
+        android:lineSpacingExtra="4sp"
+        android:textColor="?attr/actionMenuTextColor" />
 
     <TextView
         android:text="Zach Wibbenmeyer"
@@ -26,7 +29,9 @@
         android:layout_height="wrap_content"
         android:id="@+id/textView2"
         android:layout_below="@+id/textView"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:textColor="?attr/actionMenuTextColor" />
 
     <TextView
         android:text="Caleb Postma"
@@ -34,58 +39,76 @@
         android:layout_height="wrap_content"
         android:id="@+id/textView3"
         android:layout_below="@+id/textView2"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:textColor="?attr/actionMenuTextColor" />
 
     <TextView
         android:text="Cotter Koopman"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textView3"
-        android:layout_centerHorizontal="true"
         android:id="@+id/textView4"
-        android:textSize="14sp" />
+        android:textSize="14sp"
+        android:layout_below="@+id/textView2"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="16dp"
+        android:textColor="?attr/actionMenuTextColor" />
 
     <TextView
         android:text="Peter Oostema"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/textView5"
         android:layout_below="@+id/textView4"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/textView5" />
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:textColor="?attr/actionMenuTextColor" />
 
     <TextView
         android:text="Roy Adams"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/textView6"
         android:layout_below="@+id/textView5"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/textView6" />
-
-    <TextView
-        android:text="Fall 2016 CS 262"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/textView7"
-        android:textSize="12sp" />
-
-    <TextView
-        android:text="To establish a mobile-friendly user database for the Building Services Office and Campus Properties, eliminating the need for paper housekeeping logs, contact lists, etc. while providing instant access to information such as time-off requests and a connection to needed information for both student workers and supervisors."
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView8"
-        android:layout_above="@+id/textView"
-        android:layout_marginBottom="49dp" />
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:textColor="?attr/actionMenuTextColor" />
 
     <TextView
         android:text="Our Vision:"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/textView8"
+        android:id="@+id/textView9"
+        android:textSize="30sp"
+        android:textStyle="normal|bold"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:textColor="@android:color/holo_green_dark" />
+
+    <TextView
+        android:text="Created By:"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView"
+        android:textSize="30sp"
+        android:textStyle="normal|bold"
+        android:layout_marginTop="22dp"
+        android:textColor="@android:color/holo_green_dark"
+        android:layout_below="@+id/textView8"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <TextView
+        android:text="Fall 2016 CS 262"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView7"
+        android:textSize="12sp"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="12dp"
-        android:id="@+id/textView9"
-        android:textSize="18sp"
+        android:textColor="@android:color/holo_green_dark"
         android:textStyle="normal|bold" />
 </RelativeLayout>
