Added a basic Employee Contacts page

--- a/app/src/main/res/menu/activity_main.xml
+++ b/app/src/main/res/menu/activity_main.xml
@@ -3,4 +3,8 @@
     <item
         android:id="@+id/about_page"
         android:title="About" />
+
+    <item
+        android:id="@+id/employee_contact_page"
+        android:title="Employee Contact" />
 </menu>
