--- a/app/src/main/res/menu/activity_main.xml
+++ b/app/src/main/res/menu/activity_main.xml
@@ -7,4 +7,8 @@
     <item
         android:id="@+id/employee_contacts_page"
         android:title="Employee Contacts" />
+
+    <item
+        android:id="@+id/settings_page"
+        android:title="Settings" />
 </menu>
