--- a/app/src/main/res/layout/activity_employee_contacts.xml
+++ b/app/src/main/res/layout/activity_employee_contacts.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_employee_contact"
     android:layout_width="match_parent"
@@ -11,94 +11,280 @@
     tools:context="edu.calvin.cs262teamd.cleaningcrew.EmployeeContactsActivity"
     android:background="#818181">
 
-    <TextView
-        android:text="Employee 1"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/employeeIdOneTextView"
-        android:background="@android:color/darker_gray"
-        android:paddingLeft="10dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        android:textSize="24sp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_height="match_parent">
 
-    <TextView
-        android:text="Phone: (555) 555 - 5555"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/employeePhoneNumberOneTextView"
-        android:paddingLeft="12dp"
-        android:paddingTop="10dp"
-        android:layout_below="@id/employeeIdOneTextView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"/>
+        <TextView
+            android:text="Employee 1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/employeeIdOneTextView"
+            android:background="@android:color/darker_gray"
+            android:paddingLeft="10dp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+            android:textSize="24sp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
 
-    <TextView
-        android:text="Email: bleh@example.com"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/employeeEmailOneTextView"
-        android:paddingLeft="12dp"
-        android:layout_below="@id/employeePhoneNumberOneTextView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"/>
+        <TextView
+            android:text="Phone: (555) 555 - 5555"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/employeePhoneNumberOneTextView"
+            android:paddingLeft="12dp"
+            android:paddingTop="10dp"
+            android:layout_below="@id/employeeIdOneTextView"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"/>
 
-    <TextView
-        android:text="Hours: 12pm - 8pm"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/employeeHoursOneTextView"
-        android:paddingLeft="12dp"
-        android:paddingBottom="10dp"
-        android:layout_below="@id/employeeEmailOneTextView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"/>
+        <TextView
+            android:text="Email: bleh@example.com"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/employeeEmailOneTextView"
+            android:paddingLeft="12dp"
+            android:layout_below="@id/employeePhoneNumberOneTextView"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"/>
 
-    <TextView
-        android:text="Employee 2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/employeeIdTwoTextView"
-        android:background="@android:color/darker_gray"
-        android:paddingLeft="10dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        android:textSize="24sp"
-        android:layout_below="@id/employeeHoursOneTextView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        <TextView
+            android:text="Hours: 12pm - 8pm"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/employeeHoursOneTextView"
+            android:paddingLeft="12dp"
+            android:paddingBottom="10dp"
+            android:layout_below="@id/employeeEmailOneTextView"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"/>
 
-    <TextView
-        android:text="Phone: (555) 555 - 5555"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/employeePhoneNumberTwoTextView"
-        android:paddingLeft="12dp"
-        android:paddingTop="10dp"
-        android:layout_below="@id/employeeIdTwoTextView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"/>
+        <TextView
+            android:text="Employee 2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/employeeIdTwoTextView"
+            android:background="@android:color/darker_gray"
+            android:paddingLeft="10dp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+            android:textSize="24sp"
+            android:layout_below="@id/employeeHoursOneTextView"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
 
-    <TextView
-        android:text="Email: bleh@example.com"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/employeeEmailTwoTextView"
-        android:paddingLeft="12dp"
-        android:layout_below="@id/employeePhoneNumberTwoTextView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"/>
+        <TextView
+            android:text="Phone: (555) 555 - 5555"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/employeePhoneNumberTwoTextView"
+            android:paddingLeft="12dp"
+            android:paddingTop="10dp"
+            android:layout_below="@id/employeeIdTwoTextView"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"/>
 
-    <TextView
-        android:text="Hours: 12pm - 8pm"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/employeeHoursTwoTextView"
-        android:paddingLeft="12dp"
-        android:paddingBottom="10dp"
-        android:layout_below="@id/employeeEmailTwoTextView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"/>
+        <TextView
+            android:text="Email: bleh@example.com"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/employeeEmailTwoTextView"
+            android:paddingLeft="12dp"
+            android:layout_below="@id/employeePhoneNumberTwoTextView"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"/>
 
-</RelativeLayout>
+        <TextView
+            android:text="Hours: 12pm - 8pm"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/employeeHoursTwoTextView"
+            android:paddingLeft="12dp"
+            android:paddingBottom="10dp"
+            android:layout_below="@id/employeeEmailTwoTextView"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"/>
+
+        <TextView
+            android:text="Employee 3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/employeeIdThreeTextView"
+            android:background="@android:color/darker_gray"
+            android:paddingLeft="10dp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+            android:textSize="24sp"
+            android:layout_below="@id/employeeHoursTwoTextView"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
+        <TextView
+            android:text="Phone: (555) 555 - 5555"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/employeePhoneNumberThreeTextView"
+            android:paddingLeft="12dp"
+            android:paddingTop="10dp"
+            android:layout_below="@id/employeeIdThreeTextView"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"/>
+
+        <TextView
+            android:text="Email: email@example.com"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/employeeEmailThreeTextView"
+            android:paddingLeft="12dp"
+            android:layout_below="@id/employeePhoneNumberThreeTextView"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"/>
+
+        <TextView
+            android:text="Hours: 9am - 5pm"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/employeeHoursThreeTextView"
+            android:paddingLeft="12dp"
+            android:paddingBottom="10dp"
+            android:layout_below="@id/employeeEmailThreeTextView"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"/>
+
+        <TextView
+            android:text="Employee 4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/employeeIdFourTextView"
+            android:background="@android:color/darker_gray"
+            android:paddingLeft="10dp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+            android:textSize="24sp"
+            android:layout_below="@id/employeeHoursThreeTextView"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
+        <TextView
+            android:text="Phone: (555) 555 - 5555"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/employeePhoneNumberFourTextView"
+            android:paddingLeft="12dp"
+            android:paddingTop="10dp"
+            android:layout_below="@id/employeeIdFourTextView"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"/>
+
+        <TextView
+            android:text="Email: email@example.com"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/employeeEmailFourTextView"
+            android:paddingLeft="12dp"
+            android:layout_below="@id/employeePhoneNumberFourTextView"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"/>
+
+        <TextView
+            android:text="Hours: 9am - 5pm"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/employeeHoursFourTextView"
+            android:paddingLeft="12dp"
+            android:paddingBottom="10dp"
+            android:layout_below="@id/employeeEmailFourTextView"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"/>
+
+        <TextView
+            android:text="Employee 5"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/employeeIdFiveTextView"
+            android:background="@android:color/darker_gray"
+            android:paddingLeft="10dp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+            android:textSize="24sp"
+            android:layout_below="@id/employeeHoursFourTextView"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
+        <TextView
+            android:text="Phone: (555) 555 - 5555"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/employeePhoneNumberFiveTextView"
+            android:paddingLeft="12dp"
+            android:paddingTop="10dp"
+            android:layout_below="@id/employeeIdFiveTextView"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"/>
+
+        <TextView
+            android:text="Email: email@example.com"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/employeeEmailFiveTextView"
+            android:paddingLeft="12dp"
+            android:layout_below="@id/employeePhoneNumberFiveTextView"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"/>
+
+        <TextView
+            android:text="Hours: 9am - 5pm"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/employeeHoursFiveTextView"
+            android:paddingLeft="12dp"
+            android:paddingBottom="10dp"
+            android:layout_below="@id/employeeEmailFiveTextView"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"/>
+
+        <TextView
+            android:text="Employee 6"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/employeeIdSixTextView"
+            android:background="@android:color/darker_gray"
+            android:paddingLeft="10dp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+            android:textSize="24sp"
+            android:layout_below="@id/employeeHoursFiveTextView"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
+        <TextView
+            android:text="Phone: (555) 555 - 5555"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/employeePhoneNumberSixTextView"
+            android:paddingLeft="12dp"
+            android:paddingTop="10dp"
+            android:layout_below="@id/employeeIdSixTextView"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"/>
+
+        <TextView
+            android:text="Email: email@example.com"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/employeeEmailSixTextView"
+            android:paddingLeft="12dp"
+            android:layout_below="@id/employeePhoneNumberSixTextView"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"/>
+
+        <TextView
+            android:text="Hours: 9am - 5pm"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/employeeHoursSixTextView"
+            android:paddingLeft="12dp"
+            android:paddingBottom="10dp"
+            android:layout_below="@id/employeeEmailSixTextView"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"/>
+
+    </RelativeLayout>
+
+</ScrollView>
