--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,6 +10,9 @@
     tools:context="edu.calvin.cs262teamd.cleaningcrew.MainActivity"
     android:background="#818181">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
     <TextView
         android:text="Room 1"
@@ -93,4 +96,7 @@
         android:layout_alignParentStart="true"
         android:id="@+id/checkBox14" />
 
-</RelativeLayout>
+    </RelativeLayout>
+
+
+</ScrollView>
