--- a/app/src/main/res/menu/activity_main.xml
+++ b/app/src/main/res/menu/activity_main.xml
@@ -11,4 +11,12 @@
     <item
         android:id="@+id/settings_page"
         android:title="Settings" />
+
+    <item
+        android:id="@+id/login_page"
+        android:title="Login" />
+
+    <item
+        android:id="@+id/main_page"
+        android:title="Main" />
 </menu>
