Just changed to menu name for the login screen to "Log out"

--- a/app/src/main/res/menu/activity_main.xml
+++ b/app/src/main/res/menu/activity_main.xml
@@ -14,7 +14,7 @@
 
     <item
         android:id="@+id/login_page"
-        android:title="Login" />
+        android:title="Log Out" />
 
     <item
         android:id="@+id/main_page"
