--- a/app/src/main/res/layout/task_list.xml
+++ b/app/src/main/res/layout/task_list.xml
@@ -12,11 +12,13 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:text="room_name"
-            android:layout_width="wrap_content"
+            android:text="RoomName"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/room_name"
-            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
+            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+            android:layout_toLeftOf="@+id/checkBox"
+            android:layout_toStartOf="@+id/checkBox" />
 
         <CheckBox
             android:text="Select All"
@@ -44,4 +46,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/task_3" />
+
+    <TextView
+        android:text="CommentBox"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/commentBox" />
 </LinearLayout>
