--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="edu.calvin.cs262teamd.cleaningcrew.SettingsActivity"
+    tools:context="edu.calvin.cs262teamd.cleaningcrew.UserInfoActivity"
     android:background="#ADD8E6">
 
     <TextView
