--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_settings"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -22,7 +21,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="phone"
-        android:id="@+id/settingsPhoneNumberEditText"
         android:ems="10"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
@@ -42,7 +40,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textEmailAddress"
-        android:id="@+id/settingsEmailAddressEditText"
         android:ems="10"
         android:background="#FFFFFF"
         android:layout_alignBaseline="@+id/settingsEmailAddressTextView"
@@ -58,7 +55,6 @@
         android:layout_toRightOf="@+id/settingsPhoneNumberTextView"
         android:layout_toEndOf="@+id/settingsPhoneNumberTextView"
         android:layout_marginBottom="11dp"
-        android:textSize="18sp"
-        android:id="@+id/settingsSignOutTextView" />
+        android:textSize="18sp" />
 
 </RelativeLayout>
