--- a/app/src/main/res/layout/admin_task_list.xml
+++ b/app/src/main/res/layout/admin_task_list.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="10dp"
     android:elevation="8dp"
     android:background="@android:color/white"
-    android:weightSum="1">
+    android:weightSum="1"
+    tools:targetApi="lollipop">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -26,7 +28,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/admin_checkBox"
-            android:layout_weight="1"
             android:layout_alignParentRight="true"/>
     </RelativeLayout>
 
